# looped-blockell-tpu

./: .gitignore  CLAUDE.md  DESIGN.md  pyproject.toml
bonsai-test/: baseline.py  bench_pressure_flip.py  bitlinear.py  cms_flip_model.py  diagnose_init.py  discrete_ternary_base.py  dqt_model.py  dual_sprt_model.py  ecpg_model.py  eggroll_model.py  flip_model.py  gumbel_ternary.py  lrnet.py  lste_model.py  mirror_descent_ternary.py  model.py  nes_categorical.py  overnight_pf.py  pressure_flip.py  qsgd_model.py  reinmax_ternary.py  run_ab_eggroll.py  run_discrete_sweep.py  run_large_sweep.py  shadow_drop_model.py  sprt_flip_model.py  train.py  train_baseline_pruned.py  train_eggroll.py  train_pipeline.py
configs/: ablation.yaml  ablation_100k.yaml  ablation_15k_mem.yaml  large.yaml  medium.yaml  pipeline_70k.yaml  production.yaml  small.yaml
csrc/: __init__.py  setup.py
docs/: architecture.md  deepseek-v4-attention.md  mHC-hyper-connections.md  multi-token-prediction.md
interop/: CLAUDE.md  convert_checkpoint.py  pt_model.py
looped_blockell/: __init__.py  config.py
notebooks/: looped_blockell_colab.ipynb  scaling_analysis.ipynb
scripts/: launch_pipeline.sh  profile_step.py  run_ablation.py  run_ablation_pt.py  run_after_mtp.sh  run_all_ablations.sh  run_k_optimization.sh  run_mem_sensitivity.sh  train.py
subq-attention/: CLAUDE.md  attention.py  attention_cla.py  attention_cosine.py  attention_mla.py  attention_optimized.py  eval_needle.py  model.py  research-lsh.md  research-nsa.md  research-product-keys.md  run_ablation.py  run_optimizations.sh  train.py
(+90 files in other folders)
